--- a/Business_Evaluation.ipynb
+++ b/Business_Evaluation.ipynb
@@ -130,7 +130,7 @@
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVDpp at 0x120192980>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVDpp at 0x107465a00>"
       ]
      },
      "execution_count": 8,
@@ -189,7 +189,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/n0/fnbk7s7173bdmlw8xwk9t11r0000gn/T/ipykernel_34933/1435882947.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/n0/fnbk7s7173bdmlw8xwk9t11r0000gn/T/ipykernel_36238/1435882947.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -240,35 +240,35 @@
        "      <td>500</td>\n",
        "      <td>539</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>3.136812</td>\n",
+       "      <td>3.071442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76228</th>\n",
        "      <td>500</td>\n",
        "      <td>543</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>2.920574</td>\n",
+       "      <td>2.862351</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76229</th>\n",
        "      <td>500</td>\n",
        "      <td>588</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>3.255299</td>\n",
+       "      <td>3.072725</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76230</th>\n",
        "      <td>500</td>\n",
        "      <td>594</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>3.244347</td>\n",
+       "      <td>3.252562</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76231</th>\n",
        "      <td>500</td>\n",
        "      <td>595</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>3.224182</td>\n",
+       "      <td>3.328335</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -276,11 +276,11 @@
       ],
       "text/plain": [
        "       userID  item  rating  predictions\n",
-       "76227     500   539     1.0     3.136812\n",
-       "76228     500   543     4.0     2.920574\n",
-       "76229     500   588     4.0     3.255299\n",
-       "76230     500   594     3.0     3.244347\n",
-       "76231     500   595     4.0     3.224182"
+       "76227     500   539     1.0     3.071442\n",
+       "76228     500   543     4.0     2.862351\n",
+       "76229     500   588     4.0     3.072725\n",
+       "76230     500   594     3.0     3.252562\n",
+       "76231     500   595     4.0     3.328335"
       ]
      },
      "execution_count": 13,
@@ -356,35 +356,35 @@
        "      <td>500</td>\n",
        "      <td>720</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>3.541515</td>\n",
+       "      <td>3.617129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76288</th>\n",
+       "      <td>500</td>\n",
+       "      <td>4306</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.567536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76241</th>\n",
+       "      <td>500</td>\n",
+       "      <td>1274</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.526710</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76278</th>\n",
        "      <td>500</td>\n",
        "      <td>3083</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>3.524067</td>\n",
+       "      <td>3.493697</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>76277</th>\n",
+       "      <th>76235</th>\n",
        "      <td>500</td>\n",
-       "      <td>3060</td>\n",
+       "      <td>838</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>3.501320</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76273</th>\n",
-       "      <td>500</td>\n",
-       "      <td>2858</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.495838</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76240</th>\n",
-       "      <td>500</td>\n",
-       "      <td>1265</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.463457</td>\n",
+       "      <td>3.476684</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -400,35 +400,35 @@
        "      <td>610</td>\n",
        "      <td>318</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>4.325094</td>\n",
+       "      <td>4.323706</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>94842</th>\n",
        "      <td>610</td>\n",
        "      <td>750</td>\n",
        "      <td>4.5</td>\n",
-       "      <td>4.213530</td>\n",
+       "      <td>4.278575</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>94821</th>\n",
+       "      <th>95533</th>\n",
        "      <td>610</td>\n",
-       "      <td>356</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.201162</td>\n",
+       "      <td>58559</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.192699</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>95973</th>\n",
+       "      <th>94850</th>\n",
        "      <td>610</td>\n",
-       "      <td>142488</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>4.200773</td>\n",
+       "      <td>904</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.185872</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95852</th>\n",
        "      <td>610</td>\n",
        "      <td>106100</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>4.194502</td>\n",
+       "      <td>4.182642</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -438,17 +438,17 @@
       "text/plain": [
        "              userID    item  rating  predictions\n",
        "userID                                           \n",
-       "500    76234     500     720     4.0     3.541515\n",
-       "       76278     500    3083     1.0     3.524067\n",
-       "       76277     500    3060     3.0     3.501320\n",
-       "       76273     500    2858     5.0     3.495838\n",
-       "       76240     500    1265     3.0     3.463457\n",
+       "500    76234     500     720     4.0     3.617129\n",
+       "       76288     500    4306     5.0     3.567536\n",
+       "       76241     500    1274     4.0     3.526710\n",
+       "       76278     500    3083     1.0     3.493697\n",
+       "       76235     500     838     3.0     3.476684\n",
        "...              ...     ...     ...          ...\n",
-       "610    94816     610     318     3.0     4.325094\n",
-       "       94842     610     750     4.5     4.213530\n",
-       "       94821     610     356     3.0     4.201162\n",
-       "       95973     610  142488     3.5     4.200773\n",
-       "       95852     610  106100     4.0     4.194502\n",
+       "610    94816     610     318     3.0     4.323706\n",
+       "       94842     610     750     4.5     4.278575\n",
+       "       95533     610   58559     4.5     4.192699\n",
+       "       94850     610     904     5.0     4.185872\n",
+       "       95852     610  106100     4.0     4.182642\n",
        "\n",
        "[555 rows x 4 columns]"
       ]
@@ -479,7 +479,7 @@
     {
      "data": {
       "text/plain": [
-       "4548.5"
+       "4619.5"
       ]
      },
      "execution_count": 17,
@@ -551,7 +551,7 @@
     {
      "data": {
       "text/plain": [
-       "(4.124324324324324, 3.5534990189666447)"
+       "(4.151351351351352, 3.5534990189666447)"
       ]
      },
      "execution_count": 21,
@@ -592,7 +592,7 @@
     {
      "data": {
       "text/plain": [
-       "4126.7"
+       "4197.7"
       ]
      },
      "execution_count": 23,
@@ -650,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
